--- a/views/blocks/block-anchors.twig
+++ b/views/blocks/block-anchors.twig
@@ -39,7 +39,7 @@
                             <div class="wysi">{{ tab.group_text.wysi }}</div>
                         {% endif %}
                         {% if tab.group_text.link_cta.url %}
-                            <a {{ setLinkAttributes( tab.group_text.link_cta ) }} class="btn --stretch-mobile">{{ tab.group_text.link_cta.title }}</a>
+                            <a {{ setLinkAttributes( tab.group_text.link_cta ) }} class="btn --stretch-mobile --outline-mobile">{{ tab.group_text.link_cta.title }}</a>
                         {% endif %}
                     </div>
 
