--- a/views/blocks/block-cover-image.twig
+++ b/views/blocks/block-cover-image.twig
@@ -20,7 +20,7 @@
                 <div class="wysi">{{ wysi }}</div>
             {% endif %}
             {% if link_cta.url %}
-                <a {{ setLinkAttributes( link_cta ) }} class="btn --stretch-mobile">{{ link_cta.title }}</a>
+                <a {{ setLinkAttributes( link_cta ) }} class="btn --stretch-mobile --outline-mobile">{{ link_cta.title }}</a>
             {% endif %}
         </div>
 
