--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,7 @@
 @import 'layout/*'; 
     // TOADD _global partial with .page-wrapper, .main, (instead of .base)
 
-// @import 'vendors-custom/flickity-theme-custom';
+@import 'vendors-custom/flickity-theme-custom';
 @import 'vendors-custom/fancybox-theme-custom';
 // @import 'vendors-custom/aos-custom';
 
