--- a/src/scss/abstracts/mixins/_lists.scss
+++ b/src/scss/abstracts/mixins/_lists.scss
@@ -48,11 +48,11 @@
   
   li {
     position: relative;
-    padding-left: 24px;
+    padding-left: 28px;
 
-    @include tablet-small {
+    @include tablet {
       font-size: 16px;
-      padding-left: 28px;
+      padding-left: 32px;
     }
     
     &:before {
@@ -66,7 +66,7 @@
       background-image: url(../svg/external/icon-check-circle.svg);
       background-repeat: no-repeat;
 
-      @include tablet-small {
+      @include tablet {
         top: 3px;
       }
     }
