--- a/src/scss/components/blocks/_block-testimonial.scss
+++ b/src/scss/components/blocks/_block-testimonial.scss
@@ -8,6 +8,7 @@
 .block-testimonial {
   padding-top: 32px;
   padding-bottom: 32px;
+  overflow: hidden;
 
   .block-container {
     text-align: center;
