--- a/views/blocks/block-cover-video.twig
+++ b/views/blocks/block-cover-video.twig
@@ -14,7 +14,7 @@
                 <span class="suptitle">{{ suptitle }}</span>
             {% endif %}
             {% if title %}
-                <h1>{{ title }}</h1>
+                <h1>{{ title|titleColor }}</h1>
             {% endif %}
             {% if wysi %}
                 <div class="wysi">{{ wysi }}</div>
