--- a/views/404.twig
+++ b/views/404.twig
@@ -6,9 +6,9 @@
 		<div class="l-container --h-padding">
 
 			<div class="page-404">
-				<h1 class="page-404__title">Page 404</h1>
-				<p class="page-404__text">Désolé cette page, n'existe pas.</p>
-				<a href="{{ site.url }}" class="btn-all-posts"><span>Retour à l'accueil</span></a>
+				<h1 class="page-404__title">{{ pll__('Page 404') }}</h1>
+				<p class="page-404__text">{{ pll__('Désolé cette page, n\'existe pas') }}</p>
+				<a href="{{ site.url }}" class="btn"><span>{{ pll__('Retour à l\'accueil') }}</span></a>
    	 	</div>
 
 		</div>
