--- a/views/blocks/block-logos.twig
+++ b/views/blocks/block-logos.twig
@@ -25,6 +25,7 @@
           {% for item in images %}
 
               <div class="slide-logo">
+                 {{ getRwdImage( item.image.id, 'logo', 'logo',  { class:'u-image-cover' } ) }}
                 <img {{ setImgAttributes( item.image ) }} />
               </div>
               
