Block webinar replay - fix slider

--- a/views/blocks/block-webinar-replay.twig
+++ b/views/blocks/block-webinar-replay.twig
@@ -14,7 +14,7 @@
         </div>
     {% endif %}
     
-    {% if items|length > 1 %}
+    {% if items|length %}
         
         <div class="slider-cards-webinar__wrapper">
             <div class="slider-flickity-controls">
